comments CRUD and find photo middleware
