# models/comment.go
@@ -8,18 +8,31 @@ import (
 type Comment struct {
 	Base
 	Message string `gorm:"not null" json:"message" form:"message" valid:"required~message is required"`
-	UserID  uint   `json:"user_id"`
-	PhotoID uint   `json:"photo_id"`
+	UserID  uint
+	PhotoID uint
+	User    User
+	Photo   Photo
 }
 
 func (c *Comment) BeforeCreate(tx *gorm.DB) (err error) {
 	// validate input
-	_, err = govalidator.ValidateStruct(c)
+	input := CommentCreateInput{
+		Message: c.Message,
+		UserID:  c.UserID,
+		PhotoID: c.PhotoID,
+	}
+	_, err = govalidator.ValidateStruct(input)
 	return
 }
 
 func (c *Comment) BeforeUpdate(tx *gorm.DB) (err error) {
 	// validate input
-	_, err = govalidator.ValidateStruct(c)
+	input := CommentUpdateInput{
+		ID:      c.ID,
+		Message: c.Message,
+		UserID:  c.UserID,
+		PhotoID: c.PhotoID,
+	}
+	_, err = govalidator.ValidateStruct(input)
 	return
 }
